# scrabbleScoreboard-CLI

./: .gitignore  README.md  pyproject.toml
.github/: issue.md
scrabbleScoreboard/: auth.py  main.py
scrabbleScoreboard/commands/: game.py
